# lnk_parser

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
samples/WIN10/1607_14393/: manual.lnk  manual_unicode.lnk  metadata.txt  network_share.lnk  network_share_unicode.lnk  windows_generated.lnk  windows_generated_unicode.lnk
samples/WIN10/1903_18362/: 测试 1.txt.lnk  测试 2.txt.lnk
samples/WIN7/6.1_7601/: manual.lnk  manual_unicode.lnk  metadata.txt  network_share.lnk  network_share_unicode.lnk  windows_generated.lnk  windows_generated_unicode.lnk
samples/WS12R2/6.3_9600/: manual.lnk  manual_unicode.lnk  metadata.txt  network_share.lnk  network_share_unicode.lnk  network_share_windows_generated.lnk  network_share_windows_generated_unicode.lnk  windows_generated.lnk  windows_generated_unicode.lnk
samples/WS19/10.0_1809/: Süßspeisen mit Äpfeln.lnk  Süßspeisen.lnk
samples/mal/: exec_cmd_powershell.lnk  exec_cmd_powershell_with_shortcut.lnk
samples/other/: non_unicode_strings.lnk
src/: lib.rs  link_target_id_list.rs  shell_link_header.rs
src/extra_data/: mod.rs  tracker_data_block.rs
src/link_info/: common_network_relative_link.rs  mod.rs  volume_id.rs
tests/: lnk_parser_tests.rs
