[package]
name = "lnk_parser"
description  = "A full rust implementation to parse windows LNK files"
version = "0.4.0"
homepage = "https://u0041.co/blog/post/4"
repository = "https://github.com/AbdulRhmanAlfaifi/lnk_parser"
authors = ["AbdulRhman Alfaifi <@A__ALFAIFI>"]
edition = "2018"
default-run = "lnk_parser"
license = "MIT"

[lib]
name = "lnk_parser"
path = "src/lib.rs"

[[bin]]
name = "lnk_parser"
path = "src/bin/lnk_parser.rs"

[dependencies]
chrono="0.4.15"
byteorder = "1.3"
serde_json = "1.0"
serde = { version = "1.0.123", features = ["derive"] }
clap = "2.33.0"
glob = "0.3.0"
winparsingtools = "2"
#winparsingtools = {path="../winparsingtools"}
getset = "0.1.2"