[package]
name = "lnk_parser"
description = "A full rust implementation to parse windows LNK files"
version = "0.4.3"
homepage = "https://u0041.co/blog/post/4"
repository = "https://github.com/AbdulRhmanAlfaifi/lnk_parser"
authors = ["AbdulRhman Alfaifi <@A__ALFAIFI>"]
edition = "2018"
default-run = "lnk_parser"
license = "MIT"

[lib]
name = "lnk_parser"
path = "src/lib.rs"

[[bin]]
name = "lnk_parser"
path = "src/bin/lnk_parser.rs"
required-features = ["cli"]

[features]
cli = ["clap", "serde_json", "glob"]

[dependencies]
chrono = "^0.4.41"
byteorder = "^1.5"
serde_json = { version = "^1.0.140", optional = true }
serde = { version = "^1.0.219", features = ["derive"] }
clap = { version = "^2.33.0", optional = true }
glob = { version = "^0.3.2", optional = true }
winparsingtools = "^2.1.4"
# winparsingtools = {path="../winparsingtools"}
getset = "^0.1.6"
